Add `expand.rst` documentation and further updates to tests/implementation.
Signed-off-by: currantw <taylor.curran@improving.com>